# Jugalbandi-Manager

./: .env-dev.template  .env.template  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DeepDive.md  Developer.md  README.md  Setup.md  _config.yml  alembic.ini  docker-compose.override.yml  docker-compose.stage.yml  docker-compose.yml  dump.sql
.github/ISSUE_TEMPLATE/: bug_report.yml  c4gt_community.yml  general_issue.yml  issue_template.yml
.github/workflows/: docker-image-push.yml  jekyll-gh-pages.yml  publish-jb-manager-bot.yml  test-lib.yml  trigger-tests.yml
api/: Dockerfile  README.md  crud.py  jb_schema.py  main.py  pyproject.toml  utils.py
api/app/: bot_handlers.py  crud.py  extensions.py  handlers.py  jb_schema.py  main.py  utils.py
api/app/handlers/v1/: __init__.py  bot_handlers.py
api/app/handlers/v2/: bot.py  callback.py  channel.py
api/app/routers/: __init__.py  bots.py  callback.py  chats.py  webhook.py
api/app/routers/v1/: __init__.py
api/app/routers/v2/: __init__.py  bot.py  callback.py  channel.py
api/tests/: test_activate_bot.py  test_api.py  test_bot.py  test_bot_handlers.py  test_callback.py  test_channel.py  test_crud.py  test_extensions.py  test_main.py  test_routers_bot.py  test_routers_callback.py  test_routers_channel.py  test_routers_v1_init.py  test_update_bot.py  test_webhook.py
channel/: Dockerfile  crud.py  main.py  pyproject.toml  utils.py
channel/src/: __main__.py  crud.py  extensions.py  handler.py
channel/src/channel/: main.py
channel/src/handlers/: __init__.py  incoming.py  outgoing.py
channel/test/: test_incoming.py  test_outgoing.py
channel/tests/: test_crud.py  test_incoming.py  test_outgoing.py
channel/tests/channel/: inputs.py
db/: env.py  jb_operations.py
db/versions/: 0691bed1718d_added_retriever_logger.py  078d11b16dbc_added_jb_admins_table.py  0c7ec476bb6a_added_flow_logger.py  159ddccc1ed1_changed_column_channels_to_json.py  1928ed398bc2_added_required_credential_names.py  1c6f51f026b9_updated_jb_session.py  269472c9d076_added_jbchannel.py  2e773b3253b6_updated_retriever_and_api_logger.py  4d4d92ab085b_add_plugin_uuid.py  5379fddfdecf_initial_db.py  5491e55dfb6e_added_jb_channel.py  606542323b0b_.py  61e2bc9dea1c_added_language_logger.py  68e836bbcaa0_.py  6bfbb039a05d_update_api_logger.py  7522173046d6_updated_retriever_logger.py  755ad3370d08_adding_jb_turn.py  75ede3eb2904_updated_flow_logger.py  805244467ae1_modify_jb_bot_to_include_code.py  8fc0a0f4f22d_modify_jbbot.py  97038f7ea521_updated_jb_webhook_reference.py  a21d0cb3413a_updated_jb_message.py  (+11 more)
docs/: README.md  SUMMARY.md  _config.yml  index.md
flow/: Dockerfile  crud.py  extensions.py  installer.py  main.py  pyproject.toml
flow/src/: __main__.py  crud.py  extensions.py
flow/src/handlers/: bot.py  bot_input.py  bot_install.py  callback.py  flow_input.py
flow/template/: fsm_wrapper.py  utils.py
flow/tests/: test_bot_input.py  test_bot_install.py  test_crud.py
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
indexer/: Dockerfile  README.md  indexing.py  model.py  pyproject.toml
indexer/tests/: test_indexer.py  test_model.py
jb-lib/: README.md  pyproject.toml
jb-lib/lib/: azure_storage_sync.py  data_models.py  db_connection.py  db_session_handler.py  encryption_handler.py  logging_repository.py  model.py  producer.py  speech_processor.py  translator.py  whatsapp.py
jb-lib/lib/channel_handler/: __init__.py  channel_handler.py  custom_channel_handler.py  language.py  pinnacle_whatsapp_handler.py  rest_channel_handler.py  telegram_handler.py
jb-lib/lib/data_models/: __init__.py  channel.py  flow.py  indexer.py  language.py  logger.py  message.py  retriever.py
jb-lib/lib/file_storage/: __init__.py  handler.py  registry.py  storage.py
jb-lib/lib/file_storage/aws/: __init__.py  aws_storage.py  aws_sync_storage.py
jb-lib/lib/file_storage/azure/: __init__.py  azure_storage.py  azure_sync_storage.py
jb-lib/lib/file_storage/gcp/: __init__.py  gcp_storage.py  gcp_sync_storage.py
jb-lib/lib/file_storage/local/: __init__.py  local_storage.py  local_sync_storage.py
jb-lib/lib/kafka/: handler.py  kafka_producer.py
jb-lib/lib/models/: __init__.py
jb-lib/tests/: wa.py
jb-lib/tests/channel_handler/: messages.py  test_custom.py  test_telegram.py  test_whatsapp.py
jb-lib/tests/file_storage/aws/: test_aws_storage.py
jb-lib/tests/file_storage/azure/: test_azure_storage.py
jb-lib/tests/file_storage/gcp/: test_gcp_storage.py
jb-lib/tests/file_storage/local/: test_local_storage.py
jb-manager-bot/: README.md  pyproject.toml
jb-manager-bot/jb_manager_bot/: __init__.py  abstract_fsm.py  data_models.py
jb-manager-bot/jb_manager_bot/parsers/: __init__.py  utils.py
jb-manager-bot/jb_manager_bot/parsers/option_parser/: __init__.py  prompt.txt
jb-manager-bot/jb_manager_bot/tests/: neocarwash.py  test_abstractfsm.py  test_parser.py
language/: Dockerfile  crud.py  extension.py  handlers.py  main.py  pyproject.toml
language/src/: __main__.py  audio_converter.py  crud.py  extension.py  handlers.py  speech_processor.py  speech_repository .py  translator.py
language/tests/: test_audio_converter.py  test_crud.py  test_incoming.py  test_outgoing.py
lib/: aio_caching.py  audio_converter.py  azure_storage.py  channel_handler.py  custom_channel_helper.py  data_models.py  kafka_utils.py  logging_db_population_script.py  pyproject.toml  speech_processor.py  storage.py  translator.py  utils.py  whatsapp.py  whatsapp_helper.py
lib/tests/: audio.py  (+2 more)
logger/: Dockerfile  README.md  pyproject.toml
logger/src/: __main__.py  crud.py  handlers.py
logger/tests/: test_logging_data_into_db.py
playground/: README.md  pyproject.toml  template_fsm.py
retriever/: Dockerfile  crud.py  main.py  pyproject.toml  qa_engine.py
retriever/tests/: test_retriever.py
scripts/: create-all-topics.sh  create-migration.sh  create-topic.sh  delete-topic.sh  deploycontainers.sh  get-container-id.sh  read-message.sh  run.sh  send-message.sh  set_jbhost.sh  tg_set_webhook.sh  upgrade-db.sh
(+170 files in other folders)
