[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
python-dotenv = "^1.0.0"
confluent-kafka = "^2.3.0"
uvicorn = "^0.25.0"
requests = "^2.31.0"
asyncpg = "^0.29.0"
pytz = "^2023.3.post1"
cachetools = "^5.3.2"
pydantic = "^2.5.3"
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
cryptography = "^42.0.4"
python-multipart = "^0.0.9"


[tool.poetry.group.dev.dependencies]
lib = {path = "../jb-lib", develop = true}


[tool.poetry.group.test.dependencies]
pytest-asyncio = "^0.23.7"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "./"