[tool.poetry]
name = "language"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
aiofiles = "^23.2.1"
sqlalchemy = "^2.0.25"
azure-cognitiveservices-speech = "^1.38.0"
httpx = "^0.27.0"
aiohttp = "^3.10.0"
pydub = "^0.25.1"
boto3 = "^1.35.3"
google-cloud-speech = "^2.27.0"
google-cloud-texttospeech = "^2.17.1"
google-cloud-translate = "^3.16.0"

[tool.poetry.group.dev.dependencies]
lib = {path = "../jb-lib", develop = true}


[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "./"