[tool.poetry]
name = "jb-playground"
version = "0.1.3"
description = ""
authors = ["OpenNyAI"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.6.1"
transitions = "^0.9.0"
openai = "^1.12.0"
jb-manager-bot = {path = "../jb-manager-bot", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
