[tool.poetry]
name = "retriever"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
python-dotenv = "^1.0.0"
confluent-kafka = "^2.3.0"
uvicorn = "^0.25.0"
pgvector = "^0.2.4"
psycopg2-binary = "^2.9.9"
langchain = "^0.2.5"
langchain-openai = "^0.1.8"
langchain-postgres = "^0.0.7"
psycopg = {extras = ["binary", "pool"], version = "^3.1.19"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
