[tool.poetry]
name = "retriever"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = ">=0.109.2,<0.110.0"
python-dotenv = "^1.0.0"
confluent-kafka = "^2.3.0"
psycopg2-binary = "^2.9.9"
langchain = "^0.2.8"
langchain-openai = "^0.1.16"
psycopg = {extras = ["binary", "pool"], version = "^3.1.19"}
az-r2r = "^0.8.0"
langchain-community = "^0.2.7"

[tool.poetry.group.dev.dependencies]
lib = {path = "../jb-lib", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
